# docker-paperless-ai

./: .dockerignore  .env.example  .gitignore  AGENTS.md  ARCHITECTURE_RAM_FINDINGS.md  README.md  backup.sh  conv  custom_embed_hook.example.py  docker-compose.override.yml  docker-compose.test.yml  docker-compose.yml  run_tests.sh
.github/workflows/: build.yaml
ai/: .dockerignore  Dockerfile  batch.py  cli.py  fetch_paperless_token.py  metadata_prompt.txt  pyproject.toml  requirements.txt  uvicorn_logging.json
ai/agents/: legacy_agent.py  smart_graph_agent.py  state.py
ai/core/: config.py  paperless.py  runner.py  telemetry.py
ai/eval/: assign_splits.py  experiments.yaml  fetch_idl_data.py  golden_dataset.json  refine_golden_dataset.py  review_ground_truth.py  run_evals.py
ai/search/: __init__.py  chunker.py  embedder.py  qdrant_store.py  queue.py  webhook.py
ai/src/paperless_ai/: __init__.py  metadata_prompt.txt  prompt.txt
ai/src/paperless_ai/agents/: base.py  smart_graph_agent.py  state.py
ai/src/paperless_ai/core/: config.py  correspondent_cleanup.py  hooks.py  paperless.py  runner.py  telemetry.py
ai/src/paperless_ai/eval/: assign_splits.py  check_metadata.py  experiments.yaml  fetch_idl_data.py  golden_dataset.json  metrics.py  repro_metadata.py  review_ground_truth.py  run_evals.py
ai/src/paperless_ai/search/: __init__.py  chat_agent.py  chat_state.py  chunker.py  copilot_server.py  embedder.py  embedder_types.py  flag_reranker.py  local_search_process.py  qdrant_store.py  queue.py  retriever.py  tools.py  webhook.py  webhook_server.py
ai/tests/: conftest.py  test_chat_tools.py  test_chunker.py  test_cli_connectivity.py  test_correspondent_cleanup.py  test_e2e_pipeline.py  test_embed_hooks.py  test_embedder_client.py  test_evaluator.py  test_extraction_strategies.py  test_metrics.py  test_niquests_api_compatibility.py  test_ocr_page_selection.py  test_paperless_client.py  test_phase_b_pipeline.py  test_qwen_constraints.py  test_search.py  test_webhook.py
common/: pyproject.toml
common/src/paperless_common/: __init__.py  paperless.py  queue.py  secrets.py
docs/: deep-dive.md  index.md  linkedin-post-series.md
docs/assets/: README.md
docs/portfolio/: agentic-chat-flow.mmd  case-study.md  data-ingestion-flow.mmd  index.md  rag-deep-dive.md
docs/portfolio/assets/: README.md  chat-demo.webm
listener/: Dockerfile  fetch_paperless_token.py  pyproject.toml
listener/src/paperless_listener/: __init__.py  app.py  server.py
