[project]
name = "paperless-ai"
version = "0.1.0"
description = "AI batch post-processing for Paperless-ngx"
requires-python = ">=3.12"
dependencies = [
    "litellm>=1.50",
    "niquests>=3.0",
    "PyMuPDF>=1.25",
    "Pillow>=10.0",
    "langgraph>=0.2",
    "json-repair>=0.25",
    "openinference-instrumentation-litellm",
    "openinference-instrumentation-langchain",
    "openinference-instrumentation",
    "opentelemetry-sdk",
    "opentelemetry-exporter-otlp",
    "arize-phoenix-client",
    "arize-phoenix-otel",
    "arize-phoenix-evals",
    "nest_asyncio",
    "pandas",
    "pydantic>=2.0",
    "PyYAML>=6.0",
    "datasets",
    "click>=8.0",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "redis[hiredis]>=5.0",
    "qdrant-client[async]>=1.12",
    "fastembed>=0.3.1",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"paperless_ai" = ["*.txt", "eval/*.json", "eval/*.yaml"]
