[project]
name = "paperless-ai"
version = "0.1.0"
description = "AI batch post-processing for Paperless-ngx"
requires-python = ">=3.12"
dependencies = [
    "paperless-common",
    "litellm>=1.50",
    "niquests>=3.0",
    "PyMuPDF>=1.25",
    "Pillow>=10.0",
    "langgraph>=0.2",
    "json-repair>=0.25",
    "tenacity>=8.0",
    "pydantic-settings>=2.0",
    "openinference-instrumentation-litellm",
    "openinference-instrumentation-langchain",
    "openinference-instrumentation",
    "opentelemetry-sdk",
    "opentelemetry-exporter-otlp",
    "pydantic>=2.0",
    "PyYAML>=6.0",
    "click>=8.0",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "redis[hiredis]>=5.0",
    "qdrant-client>=1.12",
    "torch",
    "sentence-transformers>=3.0",
    "langchain-text-splitters>=1.1.1",
]

[project.optional-dependencies]
eval = [
    "arize-phoenix-client",
    "arize-phoenix-otel",
    "arize-phoenix-evals",
    "datasets",
    "nest_asyncio",
    "pandas",
]
test = [
    "paperless-listener",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "ruff>=0.15.10",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv.sources]
paperless-common = { path = "../common" }
paperless-listener = { path = "../listener" }
torch = { index = "pytorch-cpu" }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
