[project]
name = "paperless-common"
version = "0.1.0"
description = "Shared Paperless AI runtime helpers"
requires-python = ">=3.12"
dependencies = [
    "niquests>=3.0",
    "redis[hiredis]>=5.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
