[project]
name = "paperless-listener"
version = "0.1.0"
description = "Thin webhook ingress for Paperless AI"
requires-python = ">=3.12"
dependencies = [
    "paperless-common",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv.sources]
paperless-common = { path = "../common" }
